--- a/index.html
+++ b/index.html
@@ -245,8 +245,10 @@
 
         <div class="nav-buttons">
             <button class="nav-btn" onclick="showSection('injection-difference')">🔍 신경차단술이란?</button>
-            <button class="nav-btn" onclick="showSection('special-treatment')">⭐ 특수 치료 안내</button>
+            <button class="nav-btn" onclick="window.open('https://raw.githubusercontent.com/snubonafideosmanage/bonafideos_snu/main/연골주사.png', '_blank')">💉 연골주사 안내문</button>
+            <button class="nav-btn" onclick="window.open('https://raw.githubusercontent.com/snubonafideosmanage/bonafideos_snu/main/투약안내문.png', '_blank')">💊 투약안내문</button>
             <button class="nav-btn" onclick="showSection('body-part-treatment')">🦴 부위별 치료 안내</button>
+            <button class="nav-btn" onclick="showSection('special-treatment')">⭐ 특수 치료 안내</button>
             <button class="nav-btn" onclick="showSection('non-covered')">💰 비급여 항목 안내</button>
             <button class="nav-btn" onclick="showSection('documents')">📄 서류 비용 안내</button>
         </div>
